Non-final clipping for hero & minor text fixes

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -2,8 +2,8 @@
 
   @extend %u-bgcolor-blackcurrant;
   @extend %u-color-white;
-  @extend .o-section-clip;
   @extend .o-section-clip--corner-top-right;
+  @extend .o-section-clip--no-mobile;
 
   &__contact {
     @extend %u-flex;
