--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -8,6 +8,10 @@
   @extend %u-ai-center;
   @extend %u-jc-space-between;
 
+  &__home-link {
+    @extend %u-block;
+  }
+
   &__nav {
     ul {
       @extend %u-flex;
