--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -4,4 +4,5 @@
   @extend %u-fd-column;
   @extend %u-jc-center;
   @extend %u-bgcolor-black;
+  @extend .o-section-clip--ramp-bottom-right;
 }
